2013-06-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-table-1): Mark the preliminary table renderings
	instead of the final one so that we can more easily distinguish them.

	* eww.el (eww-submit): Compute the submission URL correctly.

2013-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sieve-manage.el (sieve-manage-open-server): Don't quote lambda.
	Use plist-get rather than CL's getf.
	(sieve-manage-parse-capability): Avoid CL's remove-if.

2013-06-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-url): Expansion should chop off the bits after the
	last slash.

	* eww.el (eww-tag-select): Use the first value as the default value.

2013-06-13  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* eww.el (eww): Prepend urls with http:// if scheme is missing.
	(eww-mode): Use `define-derived-mode'.
	(eww-parse-headers): Parse headers from beginning of buffer so that
	file:// links work.

2013-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eww.el (eww-detect-charset): Detect charset from the <meta> tag.

2013-06-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-svg): Ignore SVG elements, because we don't know how
	to handle them at all.

2013-06-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-convert-widgets): Make widgets from non-tabular layouts
	work, too.
	(eww-tag-select): Implement <select>.

2013-06-10  Albert Krewinkel  <krewinkel@moltkeplatz.de>

	* sieve-manage.el (sieve-manage-open): work with STARTTLS: shorten
	stream managing functions by using open-protocol-stream to do most of
	the work. Has the nice benefit of enabling STARTTLS.
	Wait for capabilities after STARTTLS: following RFC5804, the server
	sends new capabilities after successfully establishing a TLS connection
	with the client. The client should update the cached list of
	capabilities, but we just ignore the answer for now.
	(sieve-manage-network-p, sieve-manage-network-open)